--- a/index.html
+++ b/index.html
@@ -3,17 +3,63 @@
     <title>MEAN-Blog</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
-  <body ng-app="meanBlog" ng-controller="MainCtrl">
+  <script type="text/ng-template" id ="/home.html">
+    <span>
+      <a href="#/posts/{{$index}}">Comments</a>
+    </span>
+    <div class="page-header">
+      <h1>News</h1>
+    </div>
+  </script>
+  <script type="text/ng-template" id="/posts.html">
+    <div class="page-header">
+      <h3>
+        <a ng-show="post.link"
+          ng-bind="post.title"
+          href="{{post.link}}">
+        </a>
+        <span ng-hide="post.link"
+          ng-bind="post.title">
+        </span>
+      </h3>
+    </div>
+    <div ng-repeat="comment in post.comments | orderBy: '-upvotes'">
+      <span class="glyphicon glyphicon-thumbs-up"
+        ng-click="incrementUpvotes(comment)"></span>
+        {{comment.upvotes}} - by {{comment.author}}
+      <span style="font-size:20px; margin-left:10px;">{{comment.body}}</span>
+    </div>
+    <form ng-submit="addComment()"
+      style="margin-top:30px;">
+      <h3>Add a new comment</h3>
+      <div class="form-group">
+        <input type="text"
+          class="form-control"
+          placeholder="Comment"
+          ng-model="body">
+      </div>
+      <button type="submit"
+        class="btn btn-primary">Post
+      </button>
+    </form>
+  </script>
+  <body ng-app="meanBlog">
     <div class="wrapper">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
-            <div class="page-header">
+            <ui-view></ui-view>
+          <!-- </div>
+        </div>
+      </div>
+    </div> -->
+            <!-- <div class="page-header">
               <h1>News</h1>
-            </div>
+            </div> -->
             <div ng-repeat="post in posts | orderBy: '-upvotes'">
               <span class="glyphicon glyphicon-thumbs-up"
                 ng-click="incrementUpvotes(post)"
